<resources>
    <string name="app_name">JustEatIt</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_fragment">JustEatIt Login</string>
    <string name="login_username">Enter your username</string>
    <string name="login_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_register">Register for JustEatIt</string>
    <string name="register_username">Register Username</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout_button">Logout</string>
    <string name="toolbar_title">JustEatIt</string>
    <string name="guest">Guest</string>
    <string name="date_of_visit">Date of visit</string>
    <string name="view_reviews">View reviews</string>
    <string name="submit_review">submit review</string>
    <string name="leave_a_restaurant_review">Leave a Restaurant Review:</string>
    <string name="filler_description">filler description</string>
    <string name="filler_title">filler title</string>
    <string name="description">description</string>
    <string name="title">Title</string>
    <string name="write_us_a_review">Write us a review</string>
    <string name="customer_review">Customer Review</string>
    <string name="customer_review_description">Customer review Description</string>
    <string name="map_view">Map View</string>
    <string name="back_to_login">Back to Login</string>
    <string name="menu">Menu</string>
    <string name="address">Address</string>
    <string name="recommended_dishes">recommended dishes</string>
    <string name="recommendation">Recommendations</string>
    <string name="special_dish">Special Dish</string>
    <string name="home_screen_recommendation">Home Screen</string>
    <string name="tag_location">Tag Location</string>


</resources>