<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantPage."
    android:background="@drawable/background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/individual_page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/filler_title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/individual_page_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filler_description"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="10sp" />


        <TextView
            android:id="@+id/individual_page_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10sp"
            android:text="@string/leave_a_restaurant_review"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:theme="@style/RatingBar" />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/individual_page_description_review"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:imeOptions="actionNext"
                android:singleLine="true">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/write_us_a_review"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/individual_page_time_of_visit_review"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:imeOptions="actionNext"
                android:singleLine="true">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/tag_location"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/individual_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:imeOptions="actionNext"
            android:singleLine="true">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_review"
                android:layout_marginTop="10dp"
                android:gravity="center">

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_reviews"
                android:layout_marginTop="10dp"
                android:gravity="center">

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

        <ImageView
            android:id="@+id/restaurant_page_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ImageView>
    </LinearLayout>
</ScrollView>