<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginPage"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/background"
    >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_fragment"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:padding="15dp"/>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_username"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:imeOptions="actionNext"
                android:singleLine="true">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_password"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guestLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:layout_marginTop="20dp"
            android:gravity="center">

        </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="20dp"
                android:gravity="center">

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>