<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.HomeScreenFragment"
    android:orientation="vertical"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeScreenRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />


        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            android:layout_gravity="center|bottom"/>

            <Button
            android:id="@+id/locationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_view"
            android:layout_gravity="center|bottom"/>

        <Button
            android:id="@+id/recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommended_dishes"
            android:layout_gravity="center|bottom"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>